tests/machine/x/kotlin/outer_join.error
line 49:
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kotlin/outer_join.kt:49:51: error: unresolved reference: id
                println(listOf("Order", row.order.id, "by", row.customer.name, "- $", row.order.total).joinToString(" "))
                                                  ^
/workspace/mochi/tests/machine/x/kotlin/outer_join.kt:49:74: error: unresolved reference: name
                println(listOf("Order", row.order.id, "by", row.customer.name, "- $", row.order.total).joinToString(" "))
                                                                         ^
/workspace/mochi/tests/machine/x/kotlin/outer_join.kt:49:97: error: unresolved reference: total
                println(listOf("Order", row.order.id, "by", row.customer.name, "- $", row.order.total).joinToString(" "))
                                                                                                ^
/workspace/mochi/tests/machine/x/kotlin/outer_join.kt:52:51: error: unresolved reference: id
                println(listOf("Order", row.order.id, "by", "Unknown", "- $", row.order.total).joinToString(" "))
                                                  ^
/workspace/mochi/tests/machine/x/kotlin/outer_join.kt:52:89: error: unresolved reference: total
                println(listOf("Order", row.order.id, "by", "Unknown", "- $", row.order.total).joinToString(" "))
                                                                                        ^
/workspace/mochi/tests/machine/x/kotlin/outer_join.kt:56:53: error: unresolved reference: name
            println(listOf("Customer", row.customer.name, "has no orders").joinToString(" "))
                                                    ^

 48:             if (toBool(row.customer)) {
 49:                 println(listOf("Order", row.order.id, "by", row.customer.name, "- $", row.order.total).joinToString(" "))
 50:             }
